<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS330-Calc</string>
    <string name="text">Gotta calculate them all!</string>
    <string name="action_settings">Settings</string>
    <string name="button_c">C</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_decimal">.</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_divide">&#247;</string>
    <string name="button_multiply">*</string>
    <string name="button_mod">%</string>
    <string name="button_equal">=</string>
    <string name="naruchu">naruchu</string>
    <string name="button_backspace">&#8656;</string>
</resources>
